--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,31 @@
-# Compiled class file
-*.class
+# Created by .ignore support plugin (hsz.mobi)
+### Maven template
+*.iml
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
-# Log file
-*.log
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# BlueJ files
-*.ctxt
+# User-specific stuff
+.idea/
+application-local.yml
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IntelliJ
+out/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### macOS template
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
